@@ -1,3 +1,8 @@
+2012-04-18 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* godmode/agentes/agent_disk_conf_editor.php: Print message
+	using new message box
+
 2012-04-17  Vanessa Gil  <vanessa.gil@artica.es>
 
 	* images/clock2.php: Include image.
